fix header alignment

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -67,14 +67,13 @@
 }
 
 .intro-content {
-    display: flex;
-    flex-direction: column;
-    max-width: 50%;
-    /* height: inherit; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* max-width: 50%; */
     max-height: max-content;
-    justify-content: flex-end;
-    padding: 60px 40px;
-    padding-bottom: 100px;
+    /* justify-content: flex-end; */
+    /* padding: 60px 40px; */
+    /* padding-bottom: 100px; */
 }
 
 .intro-content h1 {
